@@ -1,4 +1,4 @@
-Copyright (c) 2005-2016 Michal Josef Špaček
+Copyright (c) 2005-2018 Michal Josef Špaček
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification,
