@@ -40,7 +40,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2005-2016 Michal Josef Špaček
+     © 2005-2018 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
